--- a/index.html
+++ b/index.html
@@ -115,7 +115,11 @@
             </div>
             <div class="row justify-content-center" style="margin-top: 20px;">
                 <div class="col-sm-8">
-                    <form>
+                    <div class="alert alert-success alert-dismissible fade show d-none my-alert" role="alert">
+                        <strong>Thank you!</strong> we have received your message.
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+                    <form name="faisal-contact-form">
                         <div class="mb-3">
                             <label for="name">Name</label>
                             <input type="text" id="name" name="name" class="form-control" placeholder="Enter name">
@@ -132,8 +136,13 @@
                             <label for="message">Message</label>
                             <textarea name="message" id="message" class="form-control" rows="10" placeholder="Enter message"></textarea>
                         </div>
+                        <button type="submit" class="btn btn-primary btn-send">Send</button>
+
+                        <button class="btn btn-primary btn-loading d-none" type="button" disabled>
+                            <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                            Loading...
+                        </button>
                     </form>
-                    <button type="submit" class="btn btn-primary">Send</button>
                 </div>
             </div>
         </div>
@@ -148,5 +157,35 @@
     <!-- Akhir footer -->
 
     <script src="static/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+    <script>
+        const scriptURL = 'https://script.google.com/macros/s/AKfycbwAh-t5HqmNMcu5SAALY4fg8MQapg6pyzMRZsAQ2kV__ADaWXdw_THrSdEBrdtyaLjOYw/exec'
+        const form = document.forms['faisal-contact-form']
+        const btnSend = document.querySelector('.btn-send')
+        const btnLoading = document.querySelector('.btn-loading')
+        const myAlert = document.querySelector('.my-alert')
+    
+        form.addEventListener('submit', e => {
+        e.preventDefault()
+        // Ketika tombol submit di click
+        // Tampilkan tombol loading hilangkan tombol kirim
+        btnLoading.classList.toggle('d-none')
+        btnSend.classList.toggle('d-none')
+        fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+            .then(response => {
+                // Tampilkan tombol kirim, hilangkan tombol loading
+                btnLoading.classList.toggle('d-none')
+                btnSend.classList.toggle('d-none')
+
+                // Tampilkan alert
+                myAlert.classList.toggle('d-none')
+
+                // Reset form
+                form.reset()
+                console.log('Success!', response)
+            })
+            .catch(error => console.error('Error!', error.message))
+        })
+    </script>
 </body>
 </html>
