--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="static/img/profil2.png" type="image/x-icon">
     <link rel="stylesheet" href="static/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="static/bootstrap/css/style.css">
     <link rel="stylesheet" href="static/bootstrap icon/bootstrap-icons.css">
-    <link rel="shortcut icon" href="static/img/profil2.png" type="image/x-icon">
     <title>Portfolio | Agus Faisal</title>
 </head>
 <body id="home">
@@ -42,8 +43,8 @@
     <section class="jumbotron" id="jumbotron">
         <div class="container">
             <img src="static/img/profil.jpg" alt="Muhamad Agus Faisal" class="img-thumbnail">
-            <h1 class="fw-light" style="margin-top: 20px;">Muhamad Agus Faisal</h1>
-            <p>College Student | Programmer</p>
+            <h1 class="fw-light" style="margin-top: 20px;" data-aos="fade-up" data-aos-delay="1000">Muhamad Agus Faisal</h1>
+            <p></p>
         </div>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,96L40,106.7C80,117,160,139,240,144C320,149,400,139,480,117.3C560,96,640,64,720,90.7C800,117,880,203,960,218.7C1040,235,1120,181,1200,144C1280,107,1360,85,1400,74.7L1440,64L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"></path></svg>
     </section>
@@ -51,7 +52,7 @@
 
     <!-- About -->
     <section class="about" id="about">
-        <div class="container">
+        <div class="container" data-aos="zoom-in">
             <div class="row">
                 <div class="col-sm-12">
                     <h3 class="text-center">About Me</h3>
@@ -80,24 +81,24 @@
             </div>
             <div class="row justify-content-center">
                 <div class="col-sm-3">
-                    <img src="static/gallery/1.png" alt="gallery1" class="img-thumbnail" style="margin-top: 20px;">
+                    <img src="static/gallery/1.png" alt="gallery1" class="img-thumbnail" style="margin-top: 20px;" data-aos="flip-left" data-aos-delay="200">
                 </div>
                 <div class="col-sm-3">
-                    <img src="static/gallery/2.png" alt="gallery2" class="img-thumbnail" style="margin-top: 20px;">
+                    <img src="static/gallery/2.png" alt="gallery2" class="img-thumbnail" style="margin-top: 20px;" data-aos="flip-left" data-aos-delay="400">
                 </div>
                 <div class="col-sm-3">
-                    <img src="static/gallery/3.png" alt="gallery3" class="img-thumbnail" style="margin-top: 20px;">
+                    <img src="static/gallery/3.png" alt="gallery3" class="img-thumbnail" style="margin-top: 20px;" data-aos="flip-left" data-aos-delay="600">
                 </div>
             </div>
             <div class="row justify-content-center">
                 <div class="col-sm-3">
-                    <img src="static/gallery/4.png" alt="gallery4" class="img-thumbnail" style="margin-top: 20px;">
+                    <img src="static/gallery/4.png" alt="gallery4" class="img-thumbnail" style="margin-top: 20px;" data-aos="flip-left" data-aos-delay="800">
                 </div>
                 <div class="col-sm-3">
-                    <img src="static/gallery/5.png" alt="gallery5" class="img-thumbnail" style="margin-top: 20px;">
+                    <img src="static/gallery/5.png" alt="gallery5" class="img-thumbnail" style="margin-top: 20px;" data-aos="flip-left" data-aos-delay="1000">
                 </div>
                 <div class="col-sm-3">
-                    <img src="static/gallery/6.png" alt="gallery6" class="img-thumbnail" style="margin-top: 20px;">
+                    <img src="static/gallery/6.png" alt="gallery6" class="img-thumbnail" style="margin-top: 20px;" data-aos="flip-left" data-aos-delay="1200">
                 </div>
             </div>
         </div>
@@ -157,6 +158,38 @@
     <!-- Akhir footer -->
 
     <script src="static/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/TextPlugin.min.js"></script>
+
+    <script>
+        AOS.init({
+            once:true,
+            duration: 1000,
+        });
+    </script>
+
+    <script>
+        gsap.registerPlugin(TextPlugin);
+        gsap.to('p', {
+            duration: 2,
+            delay: 1.8,
+            text: 'College Student | Programmer'
+        })
+        gsap.from('.jumbotron img', {
+            duration: 1,
+            y: -100,
+            opacity: 0,
+            ease: 'bounce'
+        })
+        gsap.from('.navbar', {
+            duration: 1.5,
+            y: '-100%',
+            opacity: 0,
+            ease: 'bounce'
+        })
+    </script>
+
 
     <script>
         const scriptURL = 'https://script.google.com/macros/s/AKfycbwAh-t5HqmNMcu5SAALY4fg8MQapg6pyzMRZsAQ2kV__ADaWXdw_THrSdEBrdtyaLjOYw/exec'
