--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
     <script>
         gsap.registerPlugin(TextPlugin);
-        gsap.to('p', {
+        gsap.to('.jumbotron p', {
             duration: 2,
             delay: 1.8,
             text: 'College Student | Programmer'
