--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12">
-                    <h3 class="text-center">My Gallery</h3>
+                    <h3 class="text-center" data-aos="flip-left">My Gallery</h3>
                 </div>
             </div>
             <div class="row justify-content-center">
