--- a/index.html
+++ b/index.html
@@ -52,17 +52,17 @@
 
     <!-- About -->
     <section class="about" id="about">
-        <div class="container" data-aos="zoom-in">
+        <div class="container">
             <div class="row">
                 <div class="col-sm-12">
-                    <h3 class="text-center">About Me</h3>
+                    <h3 class="text-center" data-aos="zoom-in">About Me</h3>
                 </div>
             </div>
             <div class="row justify-content-center" style="margin-top: 20px;">
-                <div class="col-sm-4">
+                <div class="col-sm-4" data-aos="zoom-in" data-aos-delay="200">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam veniam tempora, libero soluta aliquid rem officiis voluptate unde vel omnis quam, explicabo dolore hic ratione laborum quaerat quae rerum sit.</p>
                 </div>
-                <div class="col-sm-4">
+                <div class="col-sm-4" data-aos="zoom-in" data-aos-delay="400">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam veniam tempora, libero soluta aliquid rem officiis voluptate unde vel omnis quam, explicabo dolore hic ratione laborum quaerat quae rerum sit.</p>
                 </div>
             </div>
@@ -111,7 +111,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12">
-                    <h3 class="text-center">Contact Me</h3>
+                    <h3 class="text-center" data-aos="fade-up">Contact Me</h3>
                 </div>
             </div>
             <div class="row justify-content-center" style="margin-top: 20px;">
@@ -122,22 +122,22 @@
                     </div>
                     <form name="faisal-contact-form">
                         <div class="mb-3">
-                            <label for="name">Name</label>
-                            <input type="text" id="name" name="name" class="form-control" placeholder="Enter name">
+                            <label for="name" data-aos="fade-up" data-aos-delay="200">Name</label>
+                            <input type="text" id="name" name="name" class="form-control" placeholder="Enter name" data-aos="fade-up" data-aos-delay="400">
                         </div>
                         <div class="mb-3">
-                            <label for="email">Email</label>
-                            <input type="email" id="email" name="email" class="form-control" placeholder="Enter email">
+                            <label for="email" data-aos="fade-up" data-aos-delay="600">Email</label>
+                            <input type="email" id="email" name="email" class="form-control" placeholder="Enter email" data-aos="fade-up" data-aos-delay="800">
                         </div>
                         <div class="mb-3">
-                            <label for="phone">Phone number</label>
-                            <input type="tell" id="phone" name="phone" class="form-control" placeholder="Enter phone number">
+                            <label for="phone" data-aos="fade-up" data-aos-delay="1000">Phone number</label>
+                            <input type="tell" id="phone" name="phone" class="form-control" placeholder="Enter phone number" data-aos="fade-up" data-aos-delay="1200">
                         </div>
                         <div class="mb-3">
-                            <label for="message">Message</label>
-                            <textarea name="message" id="message" class="form-control" rows="10" placeholder="Enter message"></textarea>
+                            <label for="message" data-aos="fade-up" data-aos-delay="1400">Message</label>
+                            <textarea name="message" id="message" class="form-control" rows="6" placeholder="Enter message" data-aos="fade-up" data-aos-delay="1600"></textarea>
                         </div>
-                        <button type="submit" class="btn btn-primary btn-send">Send</button>
+                        <button type="submit" class="btn btn-primary btn-send" data-aos="fade-up" data-aos-delay="1800">Send</button>
 
                         <button class="btn btn-primary btn-loading d-none" type="button" disabled>
                             <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
